improvement breadcrumb for site ( part 1) fix while space nowrap for safari

--- a/public/css/client/packages/core.less
+++ b/public/css/client/packages/core.less
@@ -153,6 +153,7 @@ figure, figcaption{
   margin-bottom: 0;
   padding: 8px 15px 8px 0;
   .breadcrumb_item {
+    white-space: nowrap;
     &:before{
       padding: 0;
       content: '';
